@@ -15,19 +15,19 @@ remove = strict
 remove = Test::More
 
 [Prereqs]
-Acme::Alien::DontPanic                         = 0.044
+Acme::Alien::DontPanic                         = 1.03
 Acme::Alien::DontPanic2                        = 1.2900
-Acme::Ford::Prefect                            = 0.044
-Acme::Ford::Prefect2                           = 1.2902
+Acme::Ford::Prefect                            = 1.03
+Acme::Ford::Prefect2                           = 1.4100
 Acme::Ford::Prefect::FFI                       = 0.30
 Alien                                          = 0.95
 Alien::Alien                                   = 0.02
 Alien::autoconf                                = 0.14
 Alien::automake                                = 0.14
 Alien::Autotools                               = 1.04
-Alien::Base::ModuleBuild                       = 1.02
+Alien::Base::ModuleBuild                       = 1.03
 Alien::bison                                   = 0.19
-Alien::Build                                   = 1.41
+Alien::Build                                   = 1.42
 Alien::Build::Git                              = 0.06
 Alien::Build::MB                               = 0.05
 Alien::Build::Plugin::Decode::SourceForge      = 0.01
@@ -40,7 +40,7 @@ Alien::CMake                                   = 0.11
 Alien::cmake3                                  = 0.04
 Alien::curl                                    = 0.06
 Alien::Editline                                = 0.08
-Alien::FFI                                     = 0.17
+Alien::FFI                                     = 0.19
 Alien::flex                                    = 0.12
 Alien::gmake                                   = 0.21
 Alien::GMP                                     = 1.10
@@ -74,6 +74,7 @@ AnyEvent::Open3::Simple                        = 0.86
 AnyEvent::WebSocket::Client                    = 0.46
 App::af                                        = 0.15
 App::cpangitify                                = 0.17
+App::Prove::Plugin::TermTable                  = 0.02
 App::pwhich                                    = 1.15
 App::RegexFileUtils                            = 0.08
 App::spaceless                                 = 0.07
@@ -132,6 +133,7 @@ Test::Fixme                                    = 0.16
 Test::Script                                   = 1.23
 Test::Version                                  = 2.09
 Test2::Plugin::FauxHomeDir                     = 0.04
+Test2::Tools::JSON::Pointer                    = 0.01
 Test2::Tools::URL                              = 0.03
 Text::Hunspell::FFI                            = 0.02
 URI::ws                                        = 0.03
